--- a/Bot-04/credentials.yml
+++ b/Bot-04/credentials.yml
@@ -6,10 +6,10 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
-telegram:
-  access_token: 5028730749:AAGvQOUD5vplSGv3Y6SstysuKJmrYiNVxCs
-  verify: RasaCurrentWeather_Bot
-  webhook_url:  "https://83e6-187-95-14-247.ngrok.io/webhooks/telegram/webhook"
+# telegram:
+#   access_token: 5028730749:AAGvQOUD5vplSGv3Y6SstysuKJmrYiNVxCs
+#   verify: RasaCurrentWeather_Bot
+#   webhook_url:  "https://83e6-187-95-14-247.ngrok.io/webhooks/telegram/webhook"
 
 socketio:
   user_message_evt: user_uttered
