--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     ports:  
       - 5055:5055
     volumes:  
-      - ../actions:/app/actions
+      - "./actions:/app/actions"
     command:  
       - rasa
       - run
