--- a/Bot-04/credentials.yml
+++ b/Bot-04/credentials.yml
@@ -6,15 +6,15 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
-# telegram:
-#   access_token: 5028730749:AAGvQOUD5vplSGv3Y6SstysuKJmrYiNVxCs
-#   verify: RasaCurrentWeather_Bot
-#   webhook_url:  "https://83e6-187-95-14-247.ngrok.io/webhooks/telegram/webhook"
+telegram:
+  access_token: 5028730749:AAGvQOUD5vplSGv3Y6SstysuKJmrYiNVxCs
+  verify: RasaCurrentWeather_Bot
+  webhook_url: "https://rasabot-leo0liveira.cloud.okteto.net/webhooks/telegram/webhook"
 
-# socketio:
-#   user_message_evt: user_uttered
-#   bot_message_evt: bot_uttered
-#   session_persistence: true
+socketio:
+  user_message_evt: user_uttered
+  bot_message_evt: bot_uttered
+  session_persistence: true
 
 # This entry is needed if you are using Rasa X. The entry represents credentials
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
