--- a/Bot-04/credentials.yml
+++ b/Bot-04/credentials.yml
@@ -6,10 +6,10 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
-telegram:
-  access_token: 5026481763:AAHTdcQgC1BetnoipcmD3awhuef6lqaxThY
-  verify: BotTempoAtual_bot
-  webhook_url: "https://chatbot-leo0liveira.cloud.okteto.net/webhooks/telegram/webhook"
+# telegram:
+#   access_token: 5026481763:AAHTdcQgC1BetnoipcmD3awhuef6lqaxThY
+#   verify: BotTempoAtual_bot
+#   webhook_url: "https://chatbot-leo0liveira.cloud.okteto.net/webhooks/telegram/webhook"
 
 socketio:
   user_message_evt: user_uttered
