--- a/Bot-04/credentials.yml
+++ b/Bot-04/credentials.yml
@@ -11,10 +11,10 @@ rest:
 #   verify: BotTempoAtual_bot
 #   webhook_url: "https://chatbot-leo0liveira.cloud.okteto.net/webhooks/telegram/webhook"
 
-socketio:
-  user_message_evt: user_uttered
-  bot_message_evt: bot_uttered
-  session_persistence: true
+# socketio:
+#   user_message_evt: user_uttered
+#   bot_message_evt: bot_uttered
+#   session_persistence: true
 
 # This entry is needed if you are using Rasa X. The entry represents credentials
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
