--- a/Bot-04/data/nlu.yml
+++ b/Bot-04/data/nlu.yml
@@ -184,7 +184,7 @@ nlu:
     - Eu sou a [Isabela Dantas](name)
     - Meu nome é [Luis](name)
     - Meu nome é [Leo](name)
-    - Meu nome é [Leonardo](name)
+    - Meu nome é [Marcos](name)
     - Meu nome é [Guilherme](name)
     - Meu nome é [Marina](name)
     - Meu nome é [Ana Luisa](name)
@@ -222,16 +222,16 @@ nlu:
     - Prazer, [Lucas Felipe](name)
     - Prazer, [João da Silva](name)
     - Prazer, [José Augusto](name)
-    - Prazer, [André](name)
+    - Prazer, [Vinicius](name)
     - Prazer, [Ricardo Henrique](name)
-    - Prazer, [Claudia](name)
+    - Prazer, [Daniel](name)
     - Prazer, [Sofia Oliveira](name)
     - Prazer, [Isabela Dantas](name)
     - [Luis](name)
     - [Leo](name)
     - [Leonardo](name)
     - [Guilherme](name)
-    - [Marina](name)
+    - [Luara](name)
     - [Ana Luisa](name)
     - [Gustavo](name)
     - [Lucas Felipe](name)
